--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>CICLOS E ITERACIONES</h1>
+    <h1>SIMULADOR INTERACTIVO</h1>
     <hr>
     <script src="app.js"></script>
 </body>
